k8s/base/resources/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb
spec:
  ports:
  - name: "http"
    port: 8085
    targetPort: 80
  selector:
    service: lb
status:
  loadBalancer: {}
