k8s/base/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: formuladb
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - formuladb.online
    secretName: formuladb-online
  - hosts:
    - formuladb.io
    secretName: formuladb-online
  - hosts:
    - www.formuladb.online
    secretName: formuladb-online
  - hosts:
    - www.formuladb.io
    secretName: formuladb-online
  - hosts:
    - staging.formuladb.io
    secretName: formuladb-online
  - hosts:
    - demo.formuladb.io
    secretName: formuladb-online
  rules:
  - host: formuladb.online
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 8085
  - host: formuladb.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 8085
  - host: www.formuladb.online
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 8085
  - host: www.formuladb.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 8085
  - host: staging.formuladb.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 8085
  - host: demo.formuladb.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 8085
